<resources>
    <string name="app_name">Nail Tairov info</string>
    <string name="menu">Menu-land:</string>
    <string name="fio">ФИО</string>
    <string name="contacts">Контакты</string>
    <string name="skills">Навыки</string>
    <string name="back">Назад</string>
    <string name="name">Наиль</string>
    <string name="Family">Таиров</string>
    <string name="mail">ntairov@mail.ru</string>
    <string name="bDate">05.06.1985</string>
</resources>
