<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ru.stonefist.lesson2.MainActivity"
    android:background="@drawable/back"
    android:focusable="false">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fio"
        android:id="@+id/txtMenu"
        android:textSize="40sp"
        android:textColor="#c9f4e6"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:id="@+id/buttonBack1"
        android:onClick="onClickBack"
        android:layout_alignParentBottom="true" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtMenu"
        android:layout_marginTop="23dp"
        android:id="@+id/linearLayout">

        <TextView
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/Family"
            android:id="@+id/textFamily"
            android:textColor="@color/txtColor"
            android:textSize="20sp"
            android:textIsSelectable="true"
            android:paddingLeft="0dp"
            android:layout_alignRight="@+id/txtMenu"
            android:layout_alignEnd="@+id/txtMenu"
            android:padding="2dp"
            android:background="@drawable/frame"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="8dp" />

        <TextView
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/name"
            android:id="@+id/textName"
            android:textColor="@color/txtColor"
            android:textSize="20dp"
            android:layout_alignTop="@+id/linearLayout"
            android:layout_toRightOf="@+id/linearLayout"
            android:layout_toEndOf="@+id/linearLayout"
            android:layout_gravity="center_horizontal"
            android:padding="2dp"
            android:gravity="center"
            android:background="@drawable/frame"
            android:layout_marginTop="8dp" />

        <ImageView
            android:layout_width="220dp"
            android:layout_height="200dp"
            android:id="@+id/imageView"
            android:background="#84f428"
            android:adjustViewBounds="true"
            android:layout_below="@+id/linearLayout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/foto2"
            android:layout_marginTop="8dp" />

        <TextView
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/bDate"
            android:id="@+id/bDate"
            android:textColor="@color/txtColor"
            android:layout_below="@+id/txtMenu"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:padding="2dp"
            android:gravity="center"
            android:background="@drawable/frame"
            android:layout_marginTop="8dp" />

    </LinearLayout>

</RelativeLayout>
